filter by type and add in swagger documentation
