# swagger.yaml
@@ -31,7 +31,7 @@ paths:
         required: false
         schema:
           type: string
-        description: Filter by product name
+        description: Filter by product name, it looks for a name that starts with the characters given example "Bic", you will get all products that starts with Bic
       - in: query
         name: tags
         required: false
@@ -51,11 +51,21 @@ paths:
           type: integer
         description: Filter by product maximun price
       - in: query
+        name: type  
+        required: false
+        schema:
+          type: string
+          enum:
+            - busqueda
+            - venta
+        description: Get the list with products on sale or products that people are looking for.
+      - in: query
         name: sort  
         required: false
         schema:
           type: string
         description: Set the order of the list, put field name to order by it example "sort=name". If you use - character you get the list in desc order example "sort=-name"
+      
       responses:
         '200':    # status code
           description: A JSON array of user names
